# dmarc-check

./: .gitignore  README.markdown  TODO  dmarc-check.cabal  example-dmarc-check.conf  stack.yaml
src/: CSVReport.hs  CheckEmail.hs  Config.hs  DmarcCheck.hs  EmailExtract.hs  EmailHandler.hs  Main.hs
src-cmdline/: Main.hs
src-test/: CheckEmailTest.hs  DMARCAggregateReportTest.hs  EmailExtractTest.hs  ParseEmailTest.hs  Tests.hs
src-test/data/: aol-email.txt  google-email.txt  hotmail-email.txt  yahoo-email.txt
src/Data/: Conf.hs  DMARCAggregateReport.hs
src/Data/Conf/: Parser.hs
src/Data/DMARCAggregateReport/: Parser.hs  Types.hs
