name:                dmarc-check
version:             0.1.0.0
synopsis:            processes dmarc reports looking for errors
description:
   Processes aggregated DMARC reports 
license:             GPL-2
license-file:        LICENSE
author:              Stefan Schneider-Kennedy
maintainer:          code@stefansk.name
category:            Email
build-type:          Simple
cabal-version:       >=1.10

library
   hs-source-dirs: src
   exposed-modules:
      DmarcCheck,
      Config,
      EmailExtract,
      Data.DMARCAggregateReport
   other-modules:
      CSVReport,
      EmailHandler,
      Data.Conf,
      Data.Conf.Parser,
      Data.DMARCAggregateReport.Parser,
      Data.DMARCAggregateReport.Types
   default-language: Haskell2010
   build-depends:
      base >=4.7 && <4.9,
      HaskellNet-SSL >= 0.3.2.1,
      HaskellNet >= 0.3,
      hsemail == 1.7.7,
      parsec >= 3.0,
      MissingH >= 1.0.0,
      zip-archive >= 0.2.3,
      bytestring >= 0.10.0,
      base64-bytestring >= 1.0.0.1,
      old-time >= 1.1.0.3,
      dns,
      cassava,
      -- For Data.DMARCAggregateReport
      xml >= 1.3,
      iproute,
      -- For Data.Conf
      haskell-src,
      text >= 1.1.1.3
   
executable dmarc-check
   main-is: Main.hs
   hs-source-dirs: src-cmdline
   default-language:    Haskell2010
   build-depends:
      base >=4.7 && <4.9,
      dmarc-check

Test-Suite checks
   type: exitcode-stdio-1.0
   main-is: Tests.hs
   other-modules:
      DMARCAggregateReportTest,
      CheckEmailTest
   hs-source-dirs: src-test
   build-depends:      
      base >=4.6 && <4.9,
      test-framework,
      test-framework-hunit,
      HUnit,
      containers == 0.5.*,
      bytestring >= 0.10.0,
      base64-bytestring >= 1.0.0.1,
      old-time >= 1.1.0.3,
      dmarc-check
   default-language:    Haskell2010
